--- a/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
@@ -72,9 +72,10 @@
                             <h5><i class="fa fa-male" aria-hidden="true"></i> Đồ cá nhân, Thời trang <i class="fa fa-chevron-down" aria-hidden="true"></i></h5>
                         </div>
                         <ul class="submenuItems">
-                            <li onclick="DoCaNhan()"><a href="#">Chăn, ra, gối, nệm</a></li>
-                            <li onclick="DoCaNhan()"><a href="#">Giày dép</a></li>
                             <li onclick="DoCaNhan()"><a href="#">Quần áo</a></li>
+                            <li onclick="DoCaNhan()"><a href="#">Giày dép</a></li>
+                            <li onclick="DoCaNhan()"><a href="#">Phụ kiện thời trang</a></li>
+                            <li onclick="DoCaNhan()"><a href="#">Túi, balo</a></li>
                             <li onclick="DoCaNhan()"><a href="#">Đồ dùng cá nhân khác</a></li>
                         </ul>
                     </li>
@@ -87,9 +88,10 @@
 
                         </div>
                         <ul class="submenuItems">
-                            <li onclick="DoDienTu()"><a href="#">Chuột, bàn phím, ...</a></li>
-                            <li onclick="DoDienTu()"><a href="#">Điện tử học tập</a></li>
-                            <li onclick="DoDienTu()"><a href="#">Điện tử gia dụng</a></li>
+                            <li onclick="DoDienTu()"><a href="#">Điện thoại</a></li>
+                            <li onclick="DoDienTu()"><a href="#">Laptop</a></li>
+                            <li onclick="DoDienTu()"><a href="#">Phụ kiện điện tử</a></li>
+                            <li onclick="DoDienTu()"><a href="#">Đồ điện tử khác</a></li>
                         </ul>
                     </li>
                     <li>
@@ -100,29 +102,32 @@
                             </h5>
                         </div>
                         <ul class="submenuItems">
-                            <li onclick="DoNoiThat()"><a href="#">Kệ, tủ</a></li>
+                            <li onclick="DoNoiThat()"><a href="#">Tủ, kệ</a></li>
                             <li onclick="DoNoiThat()"><a href="#">Bàn ghế</a></li>
-                            <li onclick="DoNoiThat()"><a href="#">Đô gia dụng</a></li>
+                            <li onclick="DoNoiThat()"><a href="#">Giường, chăn ga gối nệm</a></li>
+                            <li onclick="DoNoiThat()"><a href="#">Dụng cụ nhà bếp</a></li>
+                            <li onclick="DoNoiThat()"><a href="#">Quạt, điều hòa</a></li>
+                            <li onclick="DoNoiThat()"><a href="#">Đèn</a></li>
                         </ul>
                     </li>
                     <li>
                         <div class="dropdownlink">
                             <h5>
                                 <i class="fa fa-motorcycle" aria-hidden="true"></i> Xe cộ
-                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                @*<i class="fa fa-chevron-down" aria-hidden="true"></i>*@
                             </h5>
 
                         </div>
-                        <ul class="submenuItems">
+                        @*<ul class="submenuItems">
                             <li onclick="PhuongTien()"><a href="#">Xe máy</a></li>
                             <li onclick="PhuongTien()"><a href="#">Xe đạp</a></li>
-                        </ul>
+                        </ul>*@
                     </li>
                     <li>
                         <div class="dropdownlink">
                             <h5 onclick="DoKhac()">
                                 Khác
-                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                @*<i class="fa fa-chevron-down" aria-hidden="true"></i>*@
                             </h5>
                         </div>
                        
