--- a/QL_CDC-master/QL_CDC/Views/SanPham/ThemPhuKienDT.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ThemPhuKienDT.cshtml
@@ -6,10 +6,25 @@
 <div class="container-fluid pt-5" style=" margin-top: -40px; margin-left: 0px">
     <!--Ten-->
     <div class="text-left mb-4" style="margin-left:-33px">
-        <h4 class=" px-5 " style="font-weight:bold; text-decoration:underline"><span class="px-2"><b>Danh mục/ </b> Nội thất, gia dụng - Bàn, ghế</span></h4>
+        <h4 class=" px-5 " style="font-weight:bold; text-decoration:underline"><span class="px-2"><b>Danh mục/ </b> Đồ điện tử - Phụ kiện điện tử</span></h4>
     </div>
-    <br>
     <div class="table-themsanpham">
+        <div class="add_label">
+            <label>Hãng </label>
+
+        </div>
+        <div class="add_input_2" style="width:20%" id="add_loai">
+            <select class="form-control" id="loaipk" style="font-weight:bold">
+                <option value="0" style="text-align:left; " selected disabled>Chọn loại phụ kiện</option>
+                <option value="Tai nghe" style="text-align:left; font-weight:bold ">Tai nghe</option>
+                <option value="Ốp lưng" style="text-align:left; font-weight:bold ">Ốp lưng</option>
+                <option value="Củ, dây sạc" style="text-align:left; font-weight:bold ">Củ, dây sạc</option>
+                <option value="Phụ kiện máy tính" style="text-align:left; font-weight:bold ">Phụ kiện máy tính</option>
+                <option value="" style="text-align:left; font-weight:bold ">Phụ kiện khác</option>              
+            </select>
+        </div>
+    </div>
+    <div class="table-themsanpham2">
         <div class="add_label">
             <label>Tiêu đề </label>
         </div>
@@ -51,15 +66,16 @@
         <div class="add_input_number">
             <input type="number" id="add_sl" min="0" class="form-control" placeholder="Đơn vị" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
         </div>
-
-        @*<div class="add_label">
+        </div>
+        <div class="table-themsanpham2">
+            <div class="add_label">
                 <label>Nhà sản xuất: </label>
 
             </div>
             <div class="add_input_number">
                 <input type="text" id="add_nsx" class="form-control" placeholder="Tên NSX" />
-            </div>*@
-    </div>
+            </div>
+        </div>
 
     <!--Hinh anh-->
     <div class="table-themsanpham2">
@@ -82,7 +98,7 @@
         </div>
     </div>
     <div class="table-themsanpham" style="margin-top:0vh">
-        <textarea class="form-control" id="add_mota" placeholder="Tên, loại , kích thước (Dài x Rộng), chất liệu, màu sắc,..."></textarea>
+        <textarea class="form-control" id="add_mota" placeholder="Tình trạng, thời gian sử dụng, sửa chữa, nâng cấp, thiết kế, màu sắc, ,..."></textarea>
     </div>
     <!--Nut-->
     <div class="table-themsanpham" style="margin-top:2vh;">
@@ -97,14 +113,17 @@
 <script>// Dang san pham
     function DangSanPham() {
         var tensp = document.getElementById('add_ten').value;
-        var mahang = 3;
-        var maloai = 14;
+        var mahang = 2;
+        var maloai = 11;
         var gia = $('#add_gia').val();
         var tg = $('#add_thoigian').val();
         var sl = $('#add_sl').val();
         var nsx = $('#add_nsx').val();
         var img = document.getElementById('add_file').files;
-        var mota = $('#add_mota').val();
+        var a = $('#loaipk').val();
+        var m = $('#add_mota').val();
+        console.log(a);
+        var mota = a + " - " + m;
 
         if (KiemTraDuLieu(tensp, mahang, maloai, gia, tg, sl, nsx, img.length, mota)) {
             var formData = new FormData();
