--- a/QL_CDC-master/QL_CDC/Views/SanPham/ThemQuatDieuHoa.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ThemQuatDieuHoa.cshtml
@@ -139,7 +139,7 @@
     function KiemTraDuLieu(tensp, mahang, maloai, gia, tg, sl, nsx, img, mota) {
         var check = false;
         if (tensp == null || tensp == "") {
-            alert("Vui lòng nhập tên sản phẩm")
+            alert("Vui lòng nhập tiêu đề bài đăng")
         }
         else if (gia == null || gia == 0 || gia == 0) {
             alert("Vui lòng nhập giá cho sản phẩm")
