--- a/QL_CDC-master/QL_CDC/Views/SanPham/ThemSPXe.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ThemSPXe.cshtml
@@ -1,40 +1,38 @@
 ﻿@model IEnumerable<QL_CDC.Models.SelectListModel>
 
 @{ ViewData["Title"] = "ThemSanPham";
-                Layout = "~/Views/Shared/_SecondLayout.cshtml"; }
+    Layout = "~/Views/Shared/_SecondLayout.cshtml"; }
 
 <div class="container-fluid pt-5" style=" margin-top: -40px; margin-left: 0px">
     <!--Ten-->
     <div class="text-left mb-4" style="margin-left:-33px">
-        <h3 class=" px-5 " style="font-weight:bold"><span class="px-2"><b>Danh mục/ </b>        Xe</span></h3>
+        <h4 class=" px-5 " style="font-weight:bold; text-decoration:underline"><span class="px-2"><b>Danh mục/ </b> Xe - Xe máy</span></h4>
     </div>
-    <br>
-    <div class="table-themsanpham">
-        <div class="add_label">
-            <label>Tiêu đề: </label>
-        </div>
-        <div class="add_input">
-            <input type="text" id="add_ten" class="form-control" placeholder="Nhập tên của sản phẩm" />
-        </div>
-    </div>
-    <!--Loai-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Loại sản phẩm: </label>
+            <label>Loại </label>
 
         </div>
-        <div class="add_input_2" style="width:40%">
-            <select class="form-control" id="add_l">
-                <option value="" style="text-align:center" selected disabled>--- Loại ---</option>
-                <option value="18" style="text-align:center; font-weight:bold ">Xe đạp, xe đạp điện</option>
-                <option value="19" style="text-align:center; font-weight:bold ">Xe máy, xe máy điện</option>
+        <div class="add_input_2" style="width:20%">
+            <select class="form-control" id="add_loai" style="font-weight: bold">
+                <option value="18" style="text-align:left; font-weight:bold ">Xe máy</option>
+                <option value="19" style="text-align:left; font-weight:bold ">Xe đạp</option>
+                <option value="7" style="text-align:left; font-weight:bold ">Xe điện</option>
             </select>
+        </div>
+    </div>
+    <div class="table-themsanpham2">
+        <div class="add_label">
+            <label>Tiêu đề </label>
+        </div>
+        <div class="add_input">
+            <input type="text" id="add_ten" class="form-control" placeholder="Nhập tiêu đề bài đăng" />
         </div>
     </div>
     <!--Thoi gian, gia-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Giá: </label>
+            <label>Giá </label>
 
         </div>
         <div class="add_input_number">
@@ -44,37 +42,42 @@
 
         </div>
     </div>
+    <div class="table-themsanpham2">
+        <div class="add_label">
+            <label>Tình trạng </label>
+
+        </div>
+        <div class="add_input_2" style="width:20%">
+            <select class="form-control" id="add_tinhtrang" style="font-weight: bold">
+                <option value="0" style="text-align:left; font-weight:bold ">Mới</option>
+                <option value="1" style="text-align:left; font-weight:bold ">Đã sử dụng</option>
+            </select>
+        </div>
+    </div>
     <!--So luong, nsx-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Số lượng: </label>
+            <label>Số lượng </label>
 
         </div>
         <div class="add_input_number">
             <input type="number" id="add_sl" min="0" class="form-control" placeholder="Đơn vị" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
         </div>
-
-        @*<div class="add_label">
-                <label>Nhà sản xuất: </label>
-
-            </div>
-            <div class="add_input_number">
-                <input type="text" id="add_nsx" class="form-control" placeholder="Tên NSX" />
-            </div>*@
     </div>
     <div class="table-themsanpham2">
-        <div class="add_input_2" style="width:40%">
-            <select class="form-control" id="add_tinhtrang">
-                <option value="" style="text-align:center" selected disabled>--- Tình trạng ---</option>
-                <option value="0" style="text-align:center; font-weight:bold ">Mới</option>
-                <option value="1" style="text-align:center; font-weight:bold ">Đã sử dụng</option>
-            </select>
+        <div class="add_label">
+            <label>Hãng xe</label>
+
+        </div>
+        <div class="add_input_number">
+            <input type="text" id="add_nsx" class="form-control" placeholder="" />
         </div>
     </div>
+
     <!--Hinh anh-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Hình ảnh: </label>
+            <label>Hình ảnh </label>
 
         </div>
         <div class="add_input_file">
@@ -88,11 +91,11 @@
     <!--Mota-->
     <div class="table-themsanpham" style="margin-top:2vh">
         <div class="add_label" style="width:50%">
-            <label>Mô tả sản phẩm: </label>
+            <label>Mô tả sản phẩm </label>
         </div>
     </div>
     <div class="table-themsanpham" style="margin-top:0vh">
-        <textarea class="form-control" id="add_mota" placeholder="Tên sản phẩm, nhãn hiệu, chất liệu, màu sắc, ..."></textarea>
+        <textarea class="form-control" id="add_mota" placeholder="Tình trạng, thời gian sử dụng, sửa chữa, nâng cấp, thiết kế, màu sắc, ,..."></textarea>
     </div>
     <!--Nut-->
     <div class="table-themsanpham" style="margin-top:2vh;">
@@ -104,13 +107,14 @@
 </div>
 
 
-<script>// Dang san pham
+<script>
+    // Dang san pham
     function DangSanPham() {
         var tensp = document.getElementById('add_ten').value;
         var mahang = 4;
-        var maloai = document.getElementById('add_l').value;
+        var maloai = $('#add_loai').val();
         var gia = $('#add_gia').val();
-        var tg = document.getElementById('add_').value;
+        var tg = $('#add_thoigian').val();
         var sl = $('#add_sl').val();
         var nsx = $('#add_nsx').val();
         var img = document.getElementById('add_file').files;
@@ -148,7 +152,7 @@
     function KiemTraDuLieu(tensp, mahang, maloai, gia, tg, sl, nsx, img, mota) {
         var check = false;
         if (tensp == null || tensp == "") {
-            alert("Vui lòng nhập tên sản phẩm")
+            alert("Vui lòng nhập tiêu đề bài đăng")
         }
         else if (gia == null || gia == 0 || gia == 0) {
             alert("Vui lòng nhập giá cho sản phẩm")
@@ -241,4 +245,6 @@
                 reader.readAsDataURL(input.files[i]);
             }
         }
-    }</script>
+    }
+
+</script>
